--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ h2 {
     border-radius: 8px;
     color: #ffffff;
     border: 0;
+    cursor: pointer;
 }
 
 .mainseconddiv {
@@ -323,7 +324,7 @@ h4 {
     align-items: center;
     margin-top: 40px;
     margin-right: 40px;
-
+    cursor: pointer;
 }
 
 .mainfifthdiv {
@@ -456,6 +457,7 @@ h5 {
     color: #FFFFFF;
     padding: 12px 24px;
     width: 100%;
+    cursor: pointer;
 }
 
 .mainsixthdiv {
@@ -545,6 +547,7 @@ h5 {
     height: 64px;
     background: #303031;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .mainseventhdiv {
@@ -581,6 +584,7 @@ h5 {
     line-height: 24px;
     color: #FFFFFF;
     border: 0;
+    cursor: pointer;
 }
 
 footer {
